sample-k8s-deployment/k8s-eg-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-web-docker
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8080
  selector:
    name: sample-web-docker
