sample-k8s-deployment/k8s-eg-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-web-docker
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    name: sample-web-docker
